--- a/centos-python3/Vagrantfile
+++ b/centos-python3/Vagrantfile
@@ -74,8 +74,10 @@ Vagrant.configure(2) do |config|
   # SHELL
 
   config.vm.provision "shell", inline: <<-SHELL
+    sudo yum update -y
     sudo yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
     sudo yum install -y wget puppet rubygems
     wget https://raw.githubusercontent.com/gknight007/gklabs_utils/master/builder-tools/build-python3-centos.sh
+    bash build-python3-centos.sh | tee build-python3-centos.sh.log
   SHELL
 end
